--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -4918,6 +4918,9 @@ select[disabled] {
     width: auto !important;
   }
 }
+.relative {
+  position: relative !important;
+}
 
 /*! ------------------- */
 /*! Footer              */
@@ -12116,15 +12119,14 @@ fieldset[disabled] .btn {
 }
 /* /Buttons */
 
-/* Explore Filter Daterange */
+/*! ------------------- */
+/*! Calendar component  */
+/*! ------------------- */
 .calendar__next-month {
   display: inline-block !important;
   vertical-align: top !important;
   min-height: 100% !important;
   visibility: hidden !important;
-}
-.relative {
-  position: relative !important;
 }
 .calendar__week {
   position: relative !important;
@@ -12206,7 +12208,165 @@ fieldset[disabled] .btn {
   vertical-align: top !important;
   min-height: 100% !important;
 }
-/* /Explore Filter Daterange */
+.calendar__week {
+  position: relative !important;
+  margin-left: 9px !important;
+}
+.calendar__text {
+  -webkit-box-direction: normal !important;
+  -webkit-box-orient: vertical !important;
+  -webkit-box-pack: center !important;
+  -webkit-box-align: center !important;
+  margin-left: 1px !important;
+  margin-right: 1px !important;
+  display: flex !important;
+  align-items: center !important;
+  justify-content: center !important;
+  flex-direction: column !important;
+  border-radius: 100% !important;
+  position: relative !important;
+  font-size: 14px !important;
+  line-height: 18px !important;
+  font-weight: 600 !important;
+  color: #222 !important;
+  border: 1.5px solid #fff !important;
+}
+.calendar__text:hover {
+  background: #fff !important;
+  border: 1.5px solid #222 !important;
+}
+.calendar__off-text {
+  -webkit-box-direction: normal !important;
+  -webkit-box-orient: vertical !important;
+  -webkit-box-pack: center !important;
+  -webkit-box-align: center !important;
+  margin-left: 1px !important;
+  margin-right: 1px !important;
+  display: flex !important;
+  align-items: center !important;
+  justify-content: center !important;
+  flex-direction: column !important;
+  border-radius: 100% !important;
+  position: relative !important;
+  font-size: 14px !important;
+  line-height: 18px !important;
+  border: 1.5px solid #fff !important;
+  color: #484848 !important;
+  font-weight: 600 !important;
+  text-decoration: none !important;
+  opacity: 0.25 !important;
+}
+.calendar__border-right {
+  box-sizing: border-box !important;
+  cursor: pointer !important;
+  text-align: center !important;
+  position: relative !important;
+  background: #fff !important;
+  border: 0 !important;
+  color: #222 !important;
+  padding: 0 !important;
+  border-top-right-radius: 4px !important;
+  border-bottom-right-radius: 4px !important;
+}
+.calendar__border-left {
+  box-sizing: border-box !important;
+  cursor: pointer !important;
+  text-align: center !important;
+  position: relative !important;
+  background: #fff !important;
+  border: 0 !important;
+  color: #222 !important;
+  padding: 0 !important;
+  border-top-left-radius: 4px !important;
+  border-bottom-left-radius: 4px !important;
+}
+.calendar__day {
+  box-sizing: border-box !important;
+  cursor: pointer !important;
+  text-align: center !important;
+  position: relative !important;
+  background: #fff !important;
+  border: 0 !important;
+  color: #222 !important;
+  padding: 0 !important;
+}
+.calendar__month-body {
+  border-collapse: separate !important;
+}
+.calendar__off-border-right {
+  box-sizing: border-box !important;
+  text-align: center !important;
+  position: relative !important;
+  cursor: default !important;
+  border: 0 !important;
+  color: #222 !important;
+  padding: 0 !important;
+  border-top-right-radius: 4px !important;
+  border-bottom-right-radius: 4px !important;
+  background: #fff !important;
+}
+.calendar__off-border-left {
+  box-sizing: border-box !important;
+  text-align: center !important;
+  position: relative !important;
+  cursor: default !important;
+  border: 0 !important;
+  color: #222 !important;
+  padding: 0 !important;
+  border-top-left-radius: 4px !important;
+  border-bottom-left-radius: 4px !important;
+  background: #fff !important;
+}
+.calendar__off {
+  box-sizing: border-box !important;
+  text-align: center !important;
+  position: relative !important;
+  cursor: default !important;
+  border: 0 !important;
+  color: #222 !important;
+  padding: 0 !important;
+  background: #fff !important;
+}
+.calendar__month-content {
+  background: 0 0 !important;
+  text-align: center !important;
+  vertical-align: top !important;
+  user-select: none !important;
+}
+.calendar__month-header {
+  font-size: 16px !important;
+  line-height: 20px !important;
+  color: #222 !important;
+  text-align: center !important;
+  padding-top: 22px !important;
+  padding-bottom: 49px !important;
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
+    'Helvetica Neue', sans-serif !important;
+  font-weight: 600 !important;
+}
+.calendar__text {
+  -webkit-box-direction: normal !important;
+  -webkit-box-orient: vertical !important;
+  -webkit-box-pack: center !important;
+  -webkit-box-align: center !important;
+  margin-left: 1px !important;
+  margin-right: 1px !important;
+  display: flex !important;
+  align-items: center !important;
+  justify-content: center !important;
+  flex-direction: column !important;
+  border-radius: 100% !important;
+  position: relative !important;
+  font-size: 14px !important;
+  line-height: 18px !important;
+  font-weight: 600 !important;
+  color: #222 !important;
+  border: 1.5px solid #fff !important;
+}
+.calendar__text:hover {
+  background: #fff !important;
+  border: 1.5px solid #222 !important;
+}
 
 /* Explore Filter Menu */
 @media (min-width: 744px) {
@@ -12776,138 +12936,6 @@ fieldset[disabled] .btn {
 .explore-filter__controls-btn:focus-visible::before {
   box-shadow: 0 0 0 2px #222, 0 0 0 4px rgba(255, 255, 255, 0.8) !important;
   background: #f7f7f7 !important;
-}
-.calendar__off-text {
-  -webkit-box-direction: normal !important;
-  -webkit-box-orient: vertical !important;
-  -webkit-box-pack: center !important;
-  -webkit-box-align: center !important;
-  margin-left: 1px !important;
-  margin-right: 1px !important;
-  display: flex !important;
-  align-items: center !important;
-  justify-content: center !important;
-  flex-direction: column !important;
-  border-radius: 100% !important;
-  position: relative !important;
-  font-size: 14px !important;
-  line-height: 18px !important;
-  border: 1.5px solid #fff !important;
-  color: #484848 !important;
-  font-weight: 600 !important;
-  text-decoration: none !important;
-  opacity: 0.25 !important;
-}
-.calendar__border-right {
-  box-sizing: border-box !important;
-  cursor: pointer !important;
-  text-align: center !important;
-  position: relative !important;
-  background: #fff !important;
-  border: 0 !important;
-  color: #222 !important;
-  padding: 0 !important;
-  border-top-right-radius: 4px !important;
-  border-bottom-right-radius: 4px !important;
-}
-.calendar__border-left {
-  box-sizing: border-box !important;
-  cursor: pointer !important;
-  text-align: center !important;
-  position: relative !important;
-  background: #fff !important;
-  border: 0 !important;
-  color: #222 !important;
-  padding: 0 !important;
-  border-top-left-radius: 4px !important;
-  border-bottom-left-radius: 4px !important;
-}
-.calendar__day {
-  box-sizing: border-box !important;
-  cursor: pointer !important;
-  text-align: center !important;
-  position: relative !important;
-  background: #fff !important;
-  border: 0 !important;
-  color: #222 !important;
-  padding: 0 !important;
-}
-.calendar__month-body {
-  border-collapse: separate !important;
-}
-.calendar__off-border-right {
-  box-sizing: border-box !important;
-  text-align: center !important;
-  position: relative !important;
-  cursor: default !important;
-  border: 0 !important;
-  color: #222 !important;
-  padding: 0 !important;
-  border-top-right-radius: 4px !important;
-  border-bottom-right-radius: 4px !important;
-  background: #fff !important;
-}
-.calendar__off-border-left {
-  box-sizing: border-box !important;
-  text-align: center !important;
-  position: relative !important;
-  cursor: default !important;
-  border: 0 !important;
-  color: #222 !important;
-  padding: 0 !important;
-  border-top-left-radius: 4px !important;
-  border-bottom-left-radius: 4px !important;
-  background: #fff !important;
-}
-.calendar__off {
-  box-sizing: border-box !important;
-  text-align: center !important;
-  position: relative !important;
-  cursor: default !important;
-  border: 0 !important;
-  color: #222 !important;
-  padding: 0 !important;
-  background: #fff !important;
-}
-.calendar__month-content {
-  background: 0 0 !important;
-  text-align: center !important;
-  vertical-align: top !important;
-  user-select: none !important;
-}
-.calendar__month-header {
-  font-size: 16px !important;
-  line-height: 20px !important;
-  color: #222 !important;
-  text-align: center !important;
-  padding-top: 22px !important;
-  padding-bottom: 49px !important;
-  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
-    'Helvetica Neue', sans-serif !important;
-  font-weight: 600 !important;
-}
-.calendar__text {
-  -webkit-box-direction: normal !important;
-  -webkit-box-orient: vertical !important;
-  -webkit-box-pack: center !important;
-  -webkit-box-align: center !important;
-  margin-left: 1px !important;
-  margin-right: 1px !important;
-  display: flex !important;
-  align-items: center !important;
-  justify-content: center !important;
-  flex-direction: column !important;
-  border-radius: 100% !important;
-  position: relative !important;
-  font-size: 14px !important;
-  line-height: 18px !important;
-  font-weight: 600 !important;
-  color: #222 !important;
-  border: 1.5px solid #fff !important;
-}
-.calendar__text:hover {
-  background: #fff !important;
-  border: 1.5px solid #222 !important;
 }
 .explore-filter {
   font-weight: 400 !important;
