--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -50106,13 +50106,13 @@ label {
     display: block !important;
   }
 }
-._6tbg2q {
+.img-full {
   height: 0px !important;
   width: 0px !important;
   position: absolute !important;
 }
 @supports (object-fit: cover) {
-  ._6tbg2q {
+  .img-full {
     height: 100% !important;
     width: 100% !important;
   }
@@ -50139,14 +50139,6 @@ label {
   white-space: nowrap !important;
   width: 1px !important;
   margin-top: -1px !important;
-}
-.c1yo0219[class][class]::before {
-  display: flex;
-  content: '';
-}
-.c1yo0219[class][class]::before {
-  display: flex;
-  content: '';
 }
 ._14oeh8k8 {
   -webkit-box-direction: normal !important;
@@ -50492,12 +50484,12 @@ label {
   margin-right: -6px !important;
 }
 @supports (object-fit: cover) {
-  ._15p4g025 {
+  .background__img-position-center {
     display: none !important;
     background-image: none !important;
   }
 }
-._15p4g025 {
+.background__img-position-center {
   display: inline-block !important;
   vertical-align: bottom !important;
   height: 100% !important;
@@ -50680,4 +50672,258 @@ label {
   font-size: 1em;
   font-weight: inherit;
   line-height: inherit;
+}
+._1ksvx0f1 {
+  -webkit-box-pack: justify !important;
+  -webkit-box-align: center !important;
+  align-items: center !important;
+  display: flex !important;
+  flex: 0 0 auto !important;
+  justify-content: space-between !important;
+  margin: 24px 24px 12px !important;
+  position: relative !important;
+  z-index: 1 !important;
+  transition: border 0.2s ease 0s, opacity 0.2s ease 0.2s !important;
+}
+@media (min-width: 744px) {
+  ._1ksvx0f1 {
+    margin: 40px 40px 20px !important;
+  }
+}
+._1b1whhx {
+  -webkit-box-pack: center !important;
+  -webkit-box-align: center !important;
+  color: rgb(255, 255, 255) !important;
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto, "Helvetica Neue", sans-serif !important;
+  font-weight: 400 !important;
+  font-size: 16px !important;
+  line-height: 20px !important;
+  align-items: center !important;
+  inset: 0px !important;
+  display: flex !important;
+  justify-content: center !important;
+  position: absolute !important;
+}
+._1rxxw62 {
+  display: flex !important;
+  flex: 0 0 auto !important;
+}
+._1qkaeb4 {
+  min-width: 50px !important;
+}
+._1f4biqmy {
+  cursor: pointer !important;
+  display: inline-block !important;
+  margin: 0px !important;
+  position: relative !important;
+  text-align: center !important;
+  text-decoration: none !important;
+  width: auto !important;
+  touch-action: manipulation !important;
+  font-family: var(--e-ls-qkw) !important;
+  font-size: var(--c-zdwk-p) !important;
+  line-height: var(--j-p-z-kco) !important;
+  font-weight: var(--jx-zk-pv) !important;
+  border-radius: var(--go-h-jh-l) !important;
+  outline: none !important;
+  padding: 8px 16px !important;
+  transition: box-shadow 0.2s ease 0s, -ms-transform 0.1s ease 0s, -webkit-transform 0.1s ease 0s, transform 0.1s ease 0s !important;
+  -webkit-tap-highlight-color: transparent !important;
+  background: transparent !important;
+  color: rgb(255, 255, 255) !important;
+  border: none !important;
+}
+._14d5b3i {
+  -webkit-box-pack: center !important;
+  -webkit-box-align: center !important;
+  -webkit-box-direction: normal !important;
+  -webkit-box-orient: horizontal !important;
+  display: flex !important;
+  flex-direction: row !important;
+  align-items: center !important;
+  justify-content: center !important;
+  pointer-events: none !important;
+}
+._escvzw {
+  margin-left: 0px !important;
+  margin-right: 8px !important;
+}
+.dir.a8jt5op[class][class] {
+  border: 0;
+  padding: 0;
+}
+.a8jt5op[class][class] {
+  -webkit-clip: rect(0 0 0 0);
+  clip: rect(0 0 0 0);
+  -webkit-clip-path: inset(100%);
+  clip-path: inset(100%);
+  height: 1px;
+  overflow: hidden;
+  overflow: clip;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+}
+._v7xhdzy {
+  -webkit-box-pack: end !important;
+  min-width: 50px !important;
+  display: flex !important;
+  flex: 0 0 auto !important;
+  color: rgb(34, 34, 34) !important;
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto, "Helvetica Neue", sans-serif !important;
+  font-weight: 400 !important;
+  font-size: 16px !important;
+  line-height: 20px !important;
+  justify-content: flex-end !important;
+}
+._4ijurz {
+  appearance: none !important;
+  display: inline-block !important;
+  border-radius: 50% !important;
+  border: none !important;
+  outline: none !important;
+  margin: 0px !important;
+  padding: 0px !important;
+  color: rgb(255, 255, 255) !important;
+  cursor: pointer !important;
+  touch-action: manipulation !important;
+  position: relative !important;
+  background: transparent !important;
+  transition: -ms-transform 0.25s ease 0s, -webkit-transform 0.25s ease 0s, transform 0.25s ease 0s !important;
+}
+._1kpe7lgb {
+  contain: content !important;
+  height: 100% !important;
+  left: 0px !important;
+  position: absolute !important;
+  top: 0px !important;
+  width: 100% !important;
+  animation-fill-mode: both !important;
+  animation-delay: 0.4s !important;
+  animation-duration: 0.3s !important;
+  animation-iteration-count: 1 !important;
+  animation-timing-function: ease-in-out !important;
+  animation-name: keyframe_18jn58a !important;
+}
+._1kpe7lgb::after {
+  background: rgb(0, 0, 0) !important;
+  content: "" !important;
+  display: block !important;
+  height: 100% !important;
+  left: 0px !important;
+  opacity: 1 !important;
+  transition: opacity 0.2s ease 0.2s !important;
+  pointer-events: none !important;
+  position: absolute !important;
+  top: 0px !important;
+  width: 100% !important;
+  z-index: -1 !important;
+}
+._1xu9lhi {
+  position: absolute !important;
+  left: 50% !important;
+  transform: translateX(-50%) !important;
+  top: 0px !important;
+  height: 100% !important;
+  width: 100% !important;
+}
+._onta11 {
+  height: calc(100% - 96px) !important;
+  margin: 0px auto !important;
+  position: relative !important;
+  top: 96px !important;
+  width: 100% !important;
+}
+@media (min-width: 744px) {
+  ._onta11 {
+    height: calc(100% - 112px) !important;
+    top: 112px !important;
+    width: calc(100% - 192px) !important;
+  }
+}
+._cpakol {
+  -webkit-box-pack: center !important;
+  -webkit-box-direction: normal !important;
+  -webkit-box-orient: vertical !important;
+  position: absolute !important;
+  width: 100% !important;
+  height: 100% !important;
+  top: 0px !important;
+  left: 0px !important;
+  display: flex !important;
+  pointer-events: none !important;
+  flex-direction: column !important;
+  justify-content: center !important;
+}
+._vzls2v {
+  height: 100% !important;
+}
+._vzls2v:nth-child(n)>div {
+  height: 100% !important;
+}
+._1go630p {
+  flex: 1 1 100% !important;
+  max-height: calc(100% - 96px) !important;
+  position: relative !important;
+}
+@media (min-width: 744px) {
+  ._1go630p {
+    flex: 1 1 auto !important;
+    max-height: calc(100% - 112px) !important;
+  }
+}
+._26mmnvh {
+  height: 100% !important;
+  width: 100% !important;
+  user-select: none !important;
+}
+._14x8wq27 {
+  -webkit-box-pack: justify !important;
+  display: flex !important;
+  justify-content: space-between !important;
+  margin-left: calc(2% + 19px) !important;
+  margin-right: calc(2% + 19px) !important;
+}
+._1lyyzem {
+  pointer-events: all !important;
+  transition: opacity 0.2s ease 0s !important;
+}
+._1lotlmr {
+  appearance: none !important;
+  display: inline-block !important;
+  border-radius: 50% !important;
+  border: none !important;
+  outline: none !important;
+  margin: 0px !important;
+  padding: 0px !important;
+  color: rgb(255, 255, 255) !important;
+  cursor: pointer !important;
+  touch-action: manipulation !important;
+  position: relative !important;
+  background: transparent !important;
+  transition: -ms-transform 0.25s ease 0s, -webkit-transform 0.25s ease 0s, transform 0.25s ease 0s !important;
+}
+._1lotlmr::before {
+  content: "" !important;
+  display: block !important;
+  position: absolute !important;
+  top: 50% !important;
+  left: 50% !important;
+  transform: translate(-50%, -50%) !important;
+  width: 48px !important;
+  height: 48px !important;
+  border-radius: 50% !important;
+  background: transparent !important;
+  border: 2px solid rgb(176, 176, 176) !important;
+}
+._krjbj {
+  border: 0px !important;
+  clip: rect(0px, 0px, 0px, 0px) !important;
+  clip-path: inset(100%) !important;
+  height: 1px !important;
+  overflow: hidden !important;
+  padding: 0px !important;
+  position: absolute !important;
+  white-space: nowrap !important;
+  width: 1px !important;
 }
